--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="http://elm-in-action.com/styles.css"/>
-        <link rel ="stylesheet" href="http://elm-in-action.com/range-slider.css">
-        <script src="http://elm-in-action.com/range-slider.js"></script>
+        <link rel="stylesheet" href="https://elm-in-action.com/styles.css"/>
+        <link rel ="stylesheet" href="https://elm-in-action.com/range-slider.css">
+        <script src="https://elm-in-action.com/range-slider.js"></script>
         <style>
             body{ background-color: rgb(44,44,44); color: white;}
             img { border: 1px solid white; margin : 5px;}
@@ -16,7 +16,7 @@
     </head>
     <body> 
         <div id="app"></div>
-        <script src="http://elm-in-action.com/pasta.js"></script>
+        <script src="https://elm-in-action.com/pasta.js"></script>
         <script src="app.js"></script>
         <script>
             var app = Elm.PhotoGroove.init({node: document.getElementById("app")});
