--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <script src="https://elm-in-action.com/pasta.js"></script>
         <script src="app.js"></script>
         <script>
-            var app = Elm.PhotoGroove.init({node: document.getElementById("app")});
+            var app = Elm.PhotoGroove.init({
+                node: document.getElementById("app"),
+                flags: Pasta.version
+            });
 
             app.ports.setFilters.subscribe(function(options) {
                 requestAnimationFrame(function() {
