--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
     <body> 
         <div id="app"></div>
         <script src="https://elm-in-action.com/pasta.js"></script>
-        <script src="app.js"></script>
+        <script src="/app.js"></script>
         <script>
-            var app = Elm.PhotoGroove.init({
-                node: document.getElementById("app"),
-                flags: Pasta.version
-            });
+
+            var app = Elm.Main.init({ flags: Pasta.version, node: document.getElementById("app")});
 
             app.ports.setFilters.subscribe(function(options) {
                 requestAnimationFrame(function() {
